--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	
 		<div class="box">
-			<h2> Wincompense <img src="add_on.ico" alt="" > </h2>
+			<h2> Wincompense version 2 <img src="add_on.ico" alt="" > </h2>
 			<form action="MenuPrincipal.html">
 				
 				<div class="inputbox">
