--- a/MenuPrincipal.html
+++ b/MenuPrincipal.html
@@ -36,7 +36,7 @@
           </li>
 
           <li class="acc-item" id="memberships">
-            <a href="#memberships" class="btn"><i class="fas fa-suitcase"></i>WESTERN UNION</a>
+            <a href="#memberships" class="btn"><img src="Western_Union_Logo_icon-icons.com_60535.ico" alt="">             WESTERN UNION </a>
             <div class="submenu">
                <a href="#">Compenses des sous Agents</a>
                <a href="#">Réconciliation des Agences</a>
@@ -44,7 +44,7 @@
           </li>
 
           <li class="acc-item" id="Moneygram">
-            <a href="#Moneygram" class="btn"><i class="fas fa-suitcase"></i>MONEYGRAM</a>
+            <a href="#Moneygram" class="btn"><img src="Moneygram_icon-icons.com_60550.ico" alt="">            MONEYGRAM </a>
             <div class="submenu">
                 <a href="#">Compenses et Réconciliation</a>
                 <a href="#">Rapport d'activité</a>
@@ -52,7 +52,7 @@
           </li>
 
           <li class="acc-item" id="Ria">
-            <a href="#Ria" class="btn"><i class="fas fa-suitcase"></i>RIA</a>
+            <a href="#Ria" class="btn"><img src="RIA-2016-imtc.ico" alt="" >            RIA </a>
             <div class="submenu">
                 <a href="#">Compenses et Réconciliation</a>
                 <a href="#">Rapport d'activité</a>
@@ -60,7 +60,7 @@
           </li>
 
           <li class="acc-item" id="Wari">
-            <a href="#Wari" class="btn"><i class="fas fa-suitcase"></i>WARI</a>
+            <a href="#Wari" class="btn"><img src="wari-logo.ico" alt="">                      WARI </a>
             <div class="submenu">
                 <a href="#">Compenses et Réconciliation</a>
                 <a href="#">Rapport d'activité</a>
